--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ My World-PelsDiary</pre></h1>
 		<div id="about">
 			<h2 style="text-transform: capitalize;">Hi, I'm Pelumi.</h2>
 			<!--Little written introduction about and a picture of the author-->
-				<img src="../img/pelumi_akintokun2.jpg" style="height:200px;width:120px">
+				<img src="img/pelumi_akintokun2.jpg" style="height:200px;width:120px">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 				</p>
 
